# headline_grabber

./: .gitignore  .python-version  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: branch-name-check.yml
sprint1/commits/: Sheena309.commits.txt  bfinlay3.commits.txt  mralderman.commits.txt  tnguy113.commits.txt
sprint1/reflections/: smunjal.docx  tnguy113.md
sprint2/: RyanMcFarland.commits.txt  Sheena309.commits.txt  Sheena309.reflections.docx  bfinlay3.commits.txt  init.txt  mralderman.commits.txt  orionskywalker.md  tnguy113.commits.txt  tnguy113.md
src/: headline_grabber.py
src/headline_grabber/: __main__.py
src/headline_grabber/configurations/enums/: scraper_engine.py
src/headline_grabber/configurations/sites/: __init__.py  apn.yaml  (+8 more)
src/headline_grabber/models/: display_document.py  headline.py  news_site.py  pipeline_context.py  user_preferences.py
src/headline_grabber/pipeline_steps/: __init__.py  classify_subject.py  display_report.py  filter_max_results.py  filter_sentiment.py  filter_sites.py  filter_topic.py  group_by_similarity.py  pipeline_step.py  prepare_for_display.py  score_sentiment.py  scrape_text.py  text_similarity.py
src/headline_grabber/pipelines/: __init__.py  pipeline.py
tests/: test__main__.py  test_filterSites_scrapeText.py  test_filter_sites.py  test_validate_filter.py  test_validate_filter_max_results.py  test_validate_max_entries.py
tests/headline_grabber/pipeline_steps/: display_report_test.py  scrape_text_test.py  test_filter_sentiment.py  test_scrape_text_bgb.py  test_scrape_text_wap.py
(+9 files in other folders)
