[tool.poetry]
name = "headline-grabber"
version = "0.1.0"
description = ""
authors = ["bfinlayson-utk <bfinlayson@hbu.co>"]
readme = "README.md"
packages = [{include = "headline_grabber", from = "src"}]

[tool.poetry.dependencies]
python = ">3.9,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
